# adas-soa

./: CMakeLists.txt
config/: collision_provider.json  lane_info_provider.json  monitor.json  object_provider.json  provider.json  subscriber.json
fidl/: CollisionWarning.fdepl  CollisionWarning.fidl  LaneInfo.fdepl  LaneInfo.fidl  ObjectList.fdepl  ObjectList.fidl  VehicleSpeed.fdepl  VehicleSpeed.fidl
scripts/: start_monitor.sh
src/capi_collision_warning_service/: capi_collision_warning_provider.cpp  capi_collision_warning_subscriber.cpp
src/capi_lane_info_service/: capi_lane_info_provider.cpp  capi_lane_info_subscriber.cpp
src/capi_object_service/: capi_object_provider.cpp  capi_object_subscriber.cpp
src/capi_speed_service/: capi_speed_provider.cpp  capi_speed_subscriber.cpp
src/service_monitor/: service_monitor.cpp
src/speed_service/: speed_provider.cpp  speed_subscriber.cpp
